# Snake

./: .gitignore  CMakeLists.txt  INSTALL.sh  README.md  game.hpp  main.cpp  mapping.hpp  mingw-w64-x86_64.cmake  snake.hpp  utils.cpp  utils.hpp
